# qr-coder

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  db.sqlite3  docker-compose.yaml  env.yml  manage.py  pyproject.toml  requirements.txt  serverless.yaml
.github/workflows/: cd.yaml  ci.yaml
api/: urls.py  views.py
api/modules/: qr.py
qrcoder/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_qr.py
ui/: urls.py  views.py
ui/static/ui/: base.css  footer.css  privacy.css  sitemap.xml
ui/templates/ui/: base.html  cookies.html  index.html  privacy.html  robots.txt  sitemap.xml
