[tool.poetry]
name = "qr_coder"
version = "1.0.0"
requires-poetry = ">=2.0"
description = "A web application for generating qr codess"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
node-semver = "^0.8.1"
django = "^4.2.7"
djangorestframework = "^3.14.0"
djangorestframework-recursive = "^0.1.2"
django-redis = "^5.4.0"
qrcode = "^8.0"
pillow = "^11.1.0"
psycopg2-binary = "^2.9.10"
serverless-wsgi = "^3.0.5"
zappa = "^0.59.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-django = "^4.7.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "qrcoder.settings"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
